<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_1_Folie_Bitte_Anmelden"
        android:layout_width="161dp"
        android:layout_height="21dp"
        android:layout_marginTop="100dp"
        android:text="@string/title_Bitte_Anmelden"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3_Fole1._Passwort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/Folie1_Passwort"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2_Folie1._Benutzername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="@string/Folie1_Benutzername"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1_Folie1_TIcTacToe"
        android:layout_width="243dp"
        android:layout_height="155dp"
        android:layout_marginTop="452dp"
        android:contentDescription="@string/Folie1_Bild"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/folie1_tictactoe" />

    <TextView
        android:id="@+id/textView5_Folie1_TicTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Folie1_TicTacToe_Text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6_Folie1_Tobi_und_Paul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="616dp"
        android:text="@string/Folie1_ersteller"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Folie1_Spielen"
        android:layout_width="157dp"
        android:layout_height="70dp"
        android:layout_marginTop="276dp"
        android:text="@string/Folie1_Spielen"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2_Folie1_Spiel_verlassen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:text="@string/Folie1_Spiel_verlassen"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>