<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Folie3_Spielerklärung"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/textView_Folie3_Spielerklärung_Überschrift"
        android:layout_width="298dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="564dp"
        android:text="@string/Folie3_Spielerklärung_Überschrift"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Folie3_ERklärung_Text_oben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="456dp"
        android:text="@string/Folie3_Erklärung_text1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3_Folie3_Erklärung_text_unten"
        android:layout_width="353dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="384dp"
        android:text="@string/Folie3_Erklärung_Text_unten"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Folie3_Erklärung_Zurück"
        android:layout_width="178dp"
        android:layout_height="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="48dp"
        android:text="@string/Folie3_Erklärung_Button_Zurück"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2_Folie3_Erklärung_Bild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:contentDescription="@string/Folie3_Erklärung_Bild_Description"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/erklaerung_spiel" />

    <TextView
        android:id="@+id/Folie3_Spielerklärung_Unentschieden"
        android:layout_width="384dp"
        android:layout_height="61dp"
        android:layout_marginTop="480dp"
        android:text="@string/Spielerklärung_Unentschieden"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>